--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,13 @@
+#root {
+  position:absolute;
+  height: 100%;
+  width:100%;
+}
+
 .App {
   text-align: center;
+  height:100%;
+  width:100%;
 }
 
 .App-logo {
